colin tries to get off the master branch

--- a/views/create-event.html
+++ b/views/create-event.html
@@ -16,7 +16,22 @@
 	<form id="create-event" method="POST">
     <label for="title">Event title:</label>
     <input type="text" name="title">
+    
+    <label for="title">Event location:</label>
+    <input type="text" name="location">
+    
+    <label for="title">Event date:</label>
+    <input type="text" name="date">
+    
+    <label for="title">Event hour:</label>
+    <input type="text" name="hour">
+    
+    <label for="title">Event minute:</label>
+    <input type="text" name="minute">
+    
   </form>
+  
+  
 {% endblock %}
 
 
