--- a/views/layout.html
+++ b/views/layout.html
@@ -16,7 +16,11 @@
     {% endblock %}
 
     {% block footer %}
-      <footer>This be the footer.</footer>
+      <footer>  
+        <p>
+        <a id="new" href="/events/new">Create a new event</a>
+        </p>
+        </footer>
     {% endblock %}
 
   </body>
