--- a/views/layout.html
+++ b/views/layout.html
@@ -18,7 +18,8 @@
     {% block footer %}
       <footer>  
         <p>
-        <a id="new" href="/events/new">Create a new event</a>
+        <a id="about" href="/about">About</a>
+        <a id="home" href="/">Home</a>
         </p>
         </footer>
     {% endblock %}
