bootstrap css added

--- a/views/layout.html
+++ b/views/layout.html
@@ -3,6 +3,7 @@
   <head>
     <title>{{ title }}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' />
   </head>
 
 	<body class="container">
@@ -18,8 +19,8 @@
     {% block footer %}
       <footer>  
         <p>
-        <a id="about" href="/about">About</a>
         <a id="home" href="/">Home</a>
+        <a id="about" href="/about">About</a>
         </p>
         </footer>
     {% endblock %}
