--- a/views/fragments/events-list.html
+++ b/views/fragments/events-list.html
@@ -1,7 +1,7 @@
 <ul>
   {% for event in events %}
     <li>
-      {{event.title}}.
+      <a href= "/events/{{events.id}}">id="{{event.title}}">
       <time datetime="{{event.date}}">{{event.date|prettyDate}}</time>
       {{event.attending.length}} attending so far.
     </li>
