--- a/views/old-index.html
+++ b/views/old-index.html
@@ -15,7 +15,7 @@
   </p>
   <div>
     style= "border: 1px solid block"
-    {% include "fragments/events-list.html" %}
+    {% include fragments/events-list.html %}
   </div>
   <p>
     Check out the <a href="/about">About us</a> page
