--- a/views/index.html
+++ b/views/index.html
@@ -10,15 +10,11 @@
   <p>
     Welcome to {{ title }}. {{tagline}}
   </p>
-    <p>
+  <p>
     Here is a list of our events
   </p>
-  <div>
-    style= "border: 1px solid block"
-    {% include "fragments/events-list.html" %}
-  </div>
   <p>
-    Check out the <a href="/about">About us</a> page
+    Check out the <a href="/about">About us</a> page,
     as well as the <a href="/events">Events</a> page.
   </p>
   <p>
