Added events as links to the homepage, added text in several places

--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,13 @@
 {% extends "layout.html" %}
 
 {% block mainContent %}
-  <p>This is the about us page</p>
+  <p>This is the about us page. Sure, it's about us. But it's not really ABOUT US. You know?</p>
+  <p>Me neither.</p>
+  <p>
+       
+  </p>
+  <p>Andrew Baltes</p>
+  <p>Jocina Becker</p>
+  <p>Jennie Goldstein</p>
+  <p>Colin MacDougall</p>
 {% endblock %}
