--- a/views/event.html
+++ b/views/event.html
@@ -11,8 +11,13 @@
 {% endblock %}
 
 {% block footer %}
-  <footer>
-    Look at me customize the footer. The time is now {{time}}.
-    <a href="/about">About us</a>.
+  <footer>  
+        <p>
+          
+        </p>
+        <p>
+        <a id="home" href="/">Home</a>
+        <a id="about" href="/about">About</a>
+        </p>
   </footer>
 {% endblock %}
