--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 
 {% block header %}
   <header>
-    <h1>{{ title }} FTW</h1>
+    <h1>{{ title }}</h1>
   </header>
 {% endblock %}
 
@@ -11,10 +11,19 @@
     Welcome to {{ title }}. {{tagline}}
   </p>
   <p>
+    Here is our list of events -- 
+  </p>
+  <div>
+    {% include "fragments/events-list.html" %}
+  </div>
+  <p>
     Check out the <a href="/about">About us</a> page,
     as well as the <a href="/events">Events</a> page.
   </p>
   <p>
     <a id="new" href="/events/new">Create a new event</a>
+  </p>
+  <p>
+     
   </p>
 {% endblock %}
