skeleton of event submission  validation

--- a/views/create-event.html
+++ b/views/create-event.html
@@ -14,19 +14,28 @@
   {% endif %}
 
 	<form id="create-event" method="POST">
-    <label for="title">Event title:</label>
+    <label for="title">Event Title:</label>
     <input type="text" name="title">
     
-    <label for="title">Event location:</label>
+    <label for="location">Event Location:</label>
     <input type="text" name="location">
     
-    <label for="title">Event date:</label>
-    <input type="text" name="date">
+    <label for="image">Event Image:</label>
+    <input type="text" name="image">
     
-    <label for="title">Event hour:</label>
+    <label for="year">Event Year:</label>
+    <input type="text" name="year">
+    
+    <label for="month">Event Month:</label>
+    <input type="text" name="month">
+    
+    <label for="day">Event Day:</label>
+    <input type="text" name="day">
+    
+    <label for="hour">Event Hour:</label>
     <input type="text" name="hour">
     
-    <label for="title">Event minute:</label>
+    <label for="minute">Event Minute:</label>
     <input type="text" name="minute">
     
   </form>
