--- a/views/layout.html
+++ b/views/layout.html
@@ -9,7 +9,7 @@
 	<body class="container">
 
     {% block header %}
-      <header>Major Key, Many Minor Logistical Inconveniences</header>
+      <header>Daunting-Sierra Events: Major Key, Many Minor Logistical Inconveniences</header>
     {% endblock %}
 
     {% block mainContent %}
