--- a/views/fragments/events-list.html
+++ b/views/fragments/events-list.html
@@ -3,7 +3,7 @@
     <li class="event" id="event-{{event.id}}">
       <a href="/events/{{event.id}}">{{event.title}}</a>
       <time datetime="{{event.date}}">{{event.date|prettyDate}}</time>
-      {{event.attending.length}} attending so far.
+      - {{event.attending.length}} attending so far.
     </li>
   {% endfor %}
 </ul>
