pulled out real names, still need class names

--- a/views/about.html
+++ b/views/about.html
@@ -6,8 +6,8 @@
   <p>
        
   </p>
-  <p>Andrew Baltes</p>
-  <p>Jocina Becker</p>
-  <p>Jennie Goldstein</p>
-  <p>Colin MacDougall</p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p>cloudy-mouse</p>
 {% endblock %}
