--- a/views/create-event.html
+++ b/views/create-event.html
@@ -24,19 +24,22 @@
     <input type="text" name="image">
     
     <label for="year">Event Year:</label>
-    <input type="text" name="year">
+    <input type="select" name="year">
     
     <label for="month">Event Month:</label>
-    <input type="text" name="month">
+    <input type="select" name="month">
     
     <label for="day">Event Day:</label>
-    <input type="text" name="day">
+    <input type="select" name="day">
     
     <label for="hour">Event Hour:</label>
-    <input type="text" name="hour">
+    <input type="select" name="hour">
     
     <label for="minute">Event Minute:</label>
-    <input type="text" name="minute">
+    <input type="select" name="minute">
+    
+    <input type="submit" value="Submit" />
+    
     
   </form>
   
