--- a/views/about.html
+++ b/views/about.html
@@ -12,7 +12,7 @@
   <p><img src='http://petferretcare.net/wp-content/uploads/2010/12/ferret-1.jpg'></p>
   <p><span>Jocina <id='super-ferret'></span></p>
   <p><img src='http://vignette2.wikia.nocookie.net/muppet/images/7/7e/Cookie_mouth_hole.jpg/revision/latest?cb=20130719121914'></p>
-  <p><span>Jennie <id='jennie-name'></span></p>
+  <p><span>Jennie <id='graceful-wren-name'></span></p>
   <p><img src='http://img.thesun.co.uk/aidemitlum/archive/01534/mouse-532_1534605a.jpg'></p>
   <p><span>Colin <id='cloudy-mouse-name'></span></p>
 </body>
