jennie added the logo through my terminal

--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,9 @@
     Welcome to {{ title }}. {{tagline}}
   </p>
   <p>
+    <img id="logo" src="http://www.lifeistremendez.com/wp-content/uploads/2016/01/Khaled.png">
+  </p>
+  <p>
     Here is our list of events -- 
   </p>
   <div>
