--- a/views/create-event.html
+++ b/views/create-event.html
@@ -2,6 +2,13 @@
 
 {% block mainContent %}
 
+<h3>
+  You want to create an event?
+</h3>
+<br>
+<img id='youverysmart' src='https://usatftw.files.wordpress.com/2015/12/khaled2.gif'>
+<br>
+
   {% if errors %}
     <div>
       <p>Please correct the following errors!</p>
