--- a/views/event-detail.html
+++ b/views/event-detail.html
@@ -4,16 +4,6 @@
 
 <h1 id='title'>{{event.title}}</h1>
 
-  {% if errors %}
-    <div>
-      <p>Please correct the following errors!</p>
-      <ul  class="form-errors">
-        {% for error in errors %}
-          <li>{{error}}</li>
-        {% endfor %}
-      </ul>
-    </div>
-  {% endif %}
 <ul>
     <li><img id='image' src={{event.image}}></img>
     <li><span id='date'>{{event.date|prettyDate}}</span>
@@ -36,13 +26,22 @@
     {{event.attending.length}} attending so far:
 </p>
 
-<div>
-<ul>
-    {{event.attending}}
+<ul class='attendees'>
+    <li id='attendees'>
+        {{event.attending}}    
+    </li>
 </ul>
-</div>
-<br>
 
+  {% if errors %}
+    <div>
+      <p>Please correct the following errors!</p>
+      <ul  class="form-errors">
+        {% for error in errors %}
+          <li>{{error}}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
 
 
 {% endblock %}
