--- a/views/event.html
+++ b/views/event.html
@@ -2,7 +2,8 @@
 
 {% block mainContent %}
 
-  
+  <br>
+
   <img id='majorkeyalert' src='https://ih0.redbubble.net/image.210944982.3979/flat,800x800,075,f.u3.jpg'>
   
   <h1>
@@ -19,7 +20,7 @@
   </h4>  
   
   
-  <div>
+  <div class='events-lists-events-page'>
     {% include "fragments/events-list.html" %}
   </div>
   <div>
