--- a/views/layout.html
+++ b/views/layout.html
@@ -45,7 +45,7 @@
         <h4>
           Antoine's Tip of the Day:
         </h4>
-        <div class='team-names'>
+        <div class='tip-of-the-day'>
           <img id='pedicurekey' src='https://qzprod.files.wordpress.com/2016/01/screen-shot-2016-01-07-at-11-06-18-pm.png?w=940'>
         </div>
       </footer>
